force-app/main/default/objects/AI_Use_Case_Usage_Day__c/AI_Use_Case_Usage_Day__c.object-meta.xml
<CustomObject>
    <label>AI Use Case Usage Day</label>
    <nameField><displayFormat>AIUCU-{000000}</displayFormat><label
    >AI Use Case Usage Day Number</label><type>AutoNumber</type></nameField>
    <pluralLabel>AI Use Case Usage Days</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>