force-app/main/default/objects/AI_Use_Case_Usage_Day__c/fields/Day_Key__c.field-meta.xml
<CustomField>
    <fullName>Day_Key__c</fullName>
    <label>UTC Day Key</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>