force-app/main/default/objects/AI_Use_Case_Usage_Day__c/fields/Reserved_Count__c.field-meta.xml
<CustomField>
    <fullName>Reserved_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Reserved Count</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>